--- a/docker-compose-host.yml.template
+++ b/docker-compose-host.yml.template
@@ -4,6 +4,7 @@ services:
     container_name: plex
     image: plexinc/pms-docker
     restart: unless-stopped
+    privileged: true
     environment:
       - TZ=<timezone>
       - PLEX_CLAIM=<claimToken>
